--- a/res/values/values.xml
+++ b/res/values/values.xml
@@ -7,6 +7,13 @@
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue"><xliff:g id="app_name">%1$s</xliff:g> is having trouble with Google Play services. Please try again.</string>
 
+<!-- Ads -->
+<declare-styleable name="AdsAttrs">
+<attr name="adSize" format="string"/>
+<attr name="adSizes" format="string"/>
+<attr name="adUnitId" format="string"/>
+</declare-styleable>
+
 <!-- Maps -->
 <declare-styleable name="MapAttrs"><attr name="mapType">
 <enum name="none" value="0"/>
