--- a/res/values-bn/values.xml
+++ b/res/values-bn/values.xml
@@ -3,4 +3,81 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-bn/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"Google Play পরিষেবাগুলির সাথে <xliff:g id="APP_NAME">%1$s</xliff:g> এর সমস্যা হচ্ছে৷ অনুগ্রহ করে আবার চেষ্টা করুন৷"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-bn/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"<xliff:g id="NAME">%1$s</xliff:g> এ সংযুক্ত হয়েছে"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"<xliff:g id="NAME">%1$s</xliff:g> এ সংযোগ করা হচ্ছে"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"সংযোগ বিচ্ছিন্ন করুন"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-bn/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"বিজ্ঞাপন"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"%s-এ কাস্ট করা হচ্ছে"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"সাবটাইটেলগুলি"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"সাবটাইটেলগুলি অনুপলব্ধ"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"সংযোগ বিচ্ছিন্ন"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"যখন কাস্ট রিসিভার কোনো বিজ্ঞাপন চালায় তখন ছবি দেখানো হয়"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"বিজ্ঞাপন প্রগতিতে রয়েছে…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"অ্যালবাম শৈলি"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"লাইভ স্ট্রিম"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"লোড হচ্ছে…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"এড়িয়ে যান"</string>
+<string name="cast_forward" msgid="7884080323096468593">"ফরওয়ার্ড"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"দশ সেকেন্ড ফরওয়ার্ড করুন"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"তিরিশ সেকেন্ড ফরওয়ার্ড করুন"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"নিঃশব্দ করুন"</string>
+<string name="cast_pause" msgid="5308503786390460607">"বিরাম দিন"</string>
+<string name="cast_play" msgid="5906987965619702702">"চালান"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"পেছনের দিকে যান"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"দশ সেকেন্ডে পেছনের দিকে যান"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"তিরিশ সেকেন্ডে পেছনের দিকে যান"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"প্লেব্যাকের নিয়ন্ত্রণ"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"পরবর্তী আইটেমে এড়িয়ে যান"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"পূর্ববর্তী আইটেমে এড়িয়ে যান"</string>
+<string name="cast_stop" msgid="9191388946729723891">"থামান"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"লাইভ স্ট্রীম বন্ধ করুন"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"অডিও"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"বাতিল করুন"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"বন্ধ করা ক্যাপশন"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"<xliff:g id="POSITION">%1$d</xliff:g> ট্র্যাক করুন"</string>
+<string name="cast_tracks_chooser_dialog_no_audio_tracks" msgid="5563446400083425854">"কোনো অডিও ট্র্যাক উপলব্ধ নেই"</string>
+<string name="cast_tracks_chooser_dialog_no_text_tracks" msgid="7413336699113748535">"কোনো পাঠ্যের ট্র্যাক উপলব্ধ নেই"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"কোনো কিছুই নয়"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"ঠিক আছে"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"সাবটাইটেলগুলি"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"সশব্দ করুন"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-bn/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"সক্ষম করুন"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"আপনি Google Play পরিষেবা সক্ষম না করা পর্যন্ত <xliff:g id="APP_NAME">%1$s</xliff:g> কাজ করবে না।"</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Google Play পরিষেবা সক্ষম করুন"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"ইনস্টল করুন"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"Google Play পরিষেবা ছাড়া <xliff:g id="APP_NAME">%1$s</xliff:g> চলবে না, যা আপনার ডিভাইসে অনুপস্থিত।"</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Google Play পরিষেবা পান"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play পরিষেবার ত্রুটি"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"Google Play পরিষেবা ছাড়া <xliff:g id="APP_NAME">%1$s</xliff:g> চলবে না, যেটি আপনার ডিভাইসে সমর্থিত নয়৷"</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"আপডেট করুন"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"আপনি Google Play পরিষেবা আপডেট না করা পর্যন্ত <xliff:g id="APP_NAME">%1$s</xliff:g> চলবে না।"</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Google Play পরিষেবা আপডেট করুন"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"Google Play পরিষেবা ছাড়া <xliff:g id="APP_NAME">%1$s</xliff:g> চলবে না যা বর্তমানে আপডেট হচ্ছে।"</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Google Play পরিষেবার নতুন সংস্করণ প্রয়োজন৷ খুব শীঘ্রই এটা নিজেই আপডেট হবে৷"</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"ফোনে খুলুন"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"প্রবেশ করুন"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Google এর মাধ্যমে প্রবেশ করুন"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-bn/strings.xml -->
+<eat-comment/>
+<string name="accept" msgid="5835639618285370804">"স্বীকার করুন"</string>
+<string name="create_calendar_message" msgid="6155048007205742679">"বিজ্ঞাপনকে একটি ক্যালেন্ডার ইভেন্ট তৈরি করার অনুমতি দেবেন?"</string>
+<string name="create_calendar_title" msgid="7967007864778154790">"ক্যালেন্ডার ইভেন্ট তৈরি করুন"</string>
+<string name="debug_menu_ad_information" msgid="4722375419392727435">"বিজ্ঞাপনের তথ্য"</string>
+<string name="debug_menu_creative_preview" msgid="1605938743055376690">"রচনাত্মক পূর্বরূপ"</string>
+<string name="debug_menu_title" msgid="2039274714455389140">"একটি ডিবাগ মোড নির্বাচন করুন"</string>
+<string name="debug_menu_troubleshooting" msgid="1173358804935285568">"সমস্যা নিবারণ"</string>
+<string name="decline" msgid="6099173376375995052">"প্রত্যাখ্যান করুন"</string>
+<string name="store_picture_message" msgid="8020323581538738027">"বিজ্ঞাপনকে, চিত্র গ্যালারিতে ছবি সংরক্ষণ করার অনুমতি দেবেন?"</string>
+<string name="store_picture_title" msgid="4180630057627064606">"ছবি সংরক্ষন করুন"</string>
 </resources>
