--- a/res/values-hi/values.xml
+++ b/res/values-hi/values.xml
@@ -3,4 +3,81 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-hi/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> को Google Play सेवाओं के साथ समस्या आ रही है. कृपया फिर से प्रयास करें."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-hi/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"<xliff:g id="NAME">%1$s</xliff:g> से कनेक्ट है"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"<xliff:g id="NAME">%1$s</xliff:g> से कनेक्ट हो रहा है"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"डिस्कनेक्ट करें"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-hi/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"विज्ञापन"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"%s पर कास्ट किया जा रहा है"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"बंद कैप्‍शन"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"बंद कैप्शन उपलब्ध नहीं हैं"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"डिस्कनेक्ट करें"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"कास्ट प्राप्तकर्ता द्वारा विज्ञापन चलाए जाने के दौरान दिखाया जाने वाला चित्र"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"विज्ञापन चल रहा है…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"एल्बम आर्ट"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"लाइव स्ट्रीम"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"लोड हो रहा है…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"अभी नहीं"</string>
+<string name="cast_forward" msgid="7884080323096468593">"आगे बढ़ाएं"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"दस सेकंड आगे बढ़ाएं"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"तीस सेकंड आगे बढ़ाएं"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"म्यूट करें"</string>
+<string name="cast_pause" msgid="5308503786390460607">"रोकें"</string>
+<string name="cast_play" msgid="5906987965619702702">"चलाएं"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"रिवाइंड करें"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"दस सेकंड रिवाइंड करें"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"तीस सेकंड रिवाइंड करें"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"प्लेबैक आगे-पीछे ले जाने का नियंत्रण"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"अगले आइटम पर जाएं"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"पिछले आइटम पर जाएं"</string>
+<string name="cast_stop" msgid="9191388946729723891">"रोकें"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"लाइव स्ट्रीम बंद करें"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"ऑडियो"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"अभी नहीं"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"बंद कैप्शन"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"ट्रैक <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_no_audio_tracks" msgid="5563446400083425854">"कोई भी ऑडियो ट्रैक उपलब्ध नहीं है"</string>
+<string name="cast_tracks_chooser_dialog_no_text_tracks" msgid="7413336699113748535">"कोई भी लेख ट्रैक उपलब्ध नहीं है"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"कोई नहीं"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"ठीक"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"उपशीर्षक"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"अनम्यूट करें"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-hi/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"सक्षम करें"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> तब तक कार्य नहीं करेगा जब तक आप Google Play सेवाओं को सक्षम नहीं करते."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Google Play सेवाएं सक्षम करना"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"इंस्टॉल करें"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> उन Google Play सेवाओं के बिना नहीं चलेगा जो आपके डिवाइस में उपलब्ध नहीं हैं."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Google Play सेवाएं प्राप्त करना"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play सेवाएं त्रुटि"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> उन Google Play सेवाओं के बिना नहीं चलेगा, जो आपके डिवाइस द्वारा समर्थित नहीं हैं."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"अपडेट करें"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> तब तक नहीं चलेगा जब तक आप Google Play सेवाओं को अपडेट नहीं करते."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Google Play सेवाओं को अपडेट करें"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> उन Google Play सेवाओं के बिना नहीं चलेगा जो वर्तमान में अपडेट हो रही हैं."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Google Play सेवाओं के नए वर्शन की आवश्यकता है. यह स्वयं को जल्दी ही अपडेट करेगा."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"फ़ोन पर खोलें"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"प्रवेश करें"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Google के साथ प्रवेश करें"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-hi/strings.xml -->
+<eat-comment/>
+<string name="accept" msgid="5835639618285370804">"स्वीकार करें"</string>
+<string name="create_calendar_message" msgid="6155048007205742679">"विज्ञापन को कैलेंडर इवेंट बनाने की अनुमति दें?"</string>
+<string name="create_calendar_title" msgid="7967007864778154790">"कैलेंडर इवेंट बनाएं"</string>
+<string name="debug_menu_ad_information" msgid="4722375419392727435">"विज्ञापन की जानकारी"</string>
+<string name="debug_menu_creative_preview" msgid="1605938743055376690">"क्रिएटिव पूर्वावलोकन"</string>
+<string name="debug_menu_title" msgid="2039274714455389140">"कोई डीबग मोड चुनें"</string>
+<string name="debug_menu_troubleshooting" msgid="1173358804935285568">"समस्या निवारण करना"</string>
+<string name="decline" msgid="6099173376375995052">"अस्वीकार करें"</string>
+<string name="store_picture_message" msgid="8020323581538738027">"विज्ञापन को चित्र गैलरी में चित्र सहेजने की अनुमति दें?"</string>
+<string name="store_picture_title" msgid="4180630057627064606">"चित्र सहेजें"</string>
 </resources>
