--- a/res/values-ka/values.xml
+++ b/res/values-ka/values.xml
@@ -3,4 +3,81 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-ka/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g>-ს Google Play Services-თან პრობლემა შეექმნა. გთხოვთ, ცადოთ ხელახლა."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-ka/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"დაკავშირებულია <xliff:g id="NAME">%1$s</xliff:g>-თან"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"მიმდინარეობს <xliff:g id="NAME">%1$s</xliff:g>-თან დაკავშირება"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"კავშირის გაწყვეტა"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-ka/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"რეკლამა"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"ტრანსლირება %1$s-ში"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"დახურული სუბტიტრები"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"დახურული სუბტიტრები მიუწვდომელია"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"გათიშვა"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"სურათი, რომელიც ნაჩვენებია ტრანსლირების მიმღების მიერ რეკლამის დაკვრისას"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"მიმდინარეობს რეკლამა…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"ალბომის გარეკანი"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"პირდაპირი სტრიმინგი"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"იტვირთება…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"გამოტოვება"</string>
+<string name="cast_forward" msgid="7884080323096468593">"წინ გადახვევა"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"წინ გადახვევა ათი წამით"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"წინ გადახვევა ოცდაათი წამით"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"დადუმება"</string>
+<string name="cast_pause" msgid="5308503786390460607">"პაუზა"</string>
+<string name="cast_play" msgid="5906987965619702702">"დაკვრა"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"უკან გადახვევა"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"უკან გადახვევა ათი წამით"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"უკან გადახვევა ოცდაათი წამით"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"დაკვრის ცოცია"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"შემდეგ ერთეულზე გადასვლა"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"წინა ერთეულზე გადასვლა"</string>
+<string name="cast_stop" msgid="9191388946729723891">"შეწყვეტა"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"პირდაპირი სტრიმინგის შეწყვეტა"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"აუდიო"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"გაუქმება"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"დახურული სუბტიტრები"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"ჩანაწერი <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_no_audio_tracks" msgid="5563446400083425854">"აუდიო ჩანაწერები მიუწვდომელია"</string>
+<string name="cast_tracks_chooser_dialog_no_text_tracks" msgid="7413336699113748535">"ტექსტური ჩანაწერები მიუწვდომელია"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"არცერთი"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"კარგი"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"სუბტიტრები"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"დადუმების გაუქმება"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-ka/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"ჩართვა"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> ვერ იმუშავებს Google Play Services-ის ჩართვამდე."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Google Play Services-ის ჩართვა"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"ინსტალაცია"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> ვერ გაეშვება Google Play Services-ის გარეშე, რომელიც აკლია თქვენს მოწყობილობას."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Google Play Services-ის ჩამოტვირთვა"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play Services-ის შეცდომა"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> ვერ გაეშვება Google Play Services-ის გარეშე, რომლებიც მხარდაუჭერელია თქვენი მოწყობილობის მიერ."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"განახლება"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> ვერ გაეშვება, თუ Google Play სერვისებს არ განაახლებთ."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"განაახლეთ Google Play Services"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> ვერ გაეშვება Google Play Services-ის გარეშე, რომელთა განახლებაც ამჟამად მიმდინარეობს."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"საჭიროა Google Play Services-ის ახალი ვერსია. ის მალე განახლდება."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"ტელეფონში გახსნა"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"შესვლა"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Google-ით შესვლა"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-ka/strings.xml -->
+<eat-comment/>
+<string name="accept" msgid="5835639618285370804">"მიღება"</string>
+<string name="create_calendar_message" msgid="6155048007205742679">"აძლევთ ნებას რეკლამას, შექმნას მოვლენა კალენდარში?"</string>
+<string name="create_calendar_title" msgid="7967007864778154790">"კალენდარში მოვლენის შექმნა"</string>
+<string name="debug_menu_ad_information" msgid="4722375419392727435">"რეკლამის ინფორმაცია"</string>
+<string name="debug_menu_creative_preview" msgid="1605938743055376690">"რეკლამის გადახედვა"</string>
+<string name="debug_menu_title" msgid="2039274714455389140">"გამართვის რეჟიმის არჩევა"</string>
+<string name="debug_menu_troubleshooting" msgid="1173358804935285568">"დეფექტების აღმოფხვრა"</string>
+<string name="decline" msgid="6099173376375995052">"უარყოფა"</string>
+<string name="store_picture_message" msgid="8020323581538738027">"აძლევთ ნებას რეკლამას, შეინახოს სურათი გალერეაში?"</string>
+<string name="store_picture_title" msgid="4180630057627064606">"სურათის შენახვა"</string>
 </resources>
