--- a/res/values-ky/values.xml
+++ b/res/values-ky/values.xml
@@ -3,4 +3,81 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-ky/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосунун Google Play кызматтары менен иштөөдө көйгөй чыкты. Кайра аракет кылыңыз."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-ky/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"<xliff:g id="NAME">%1$s</xliff:g> менен туташып турат"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Төмөнкүгө туташууда: <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Ажыратуу"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-ky/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Жарнама"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"%1$s түзмөгүнө чыгарылууда"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Коштомо жазуулар"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Коштомо жазуулар жеткиликсиз"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Ажыратуу"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Cast ресивери жарнаманы ойноткончо сүрөт көрүнүп турат"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Жарнама аткарылууда..."</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Альбом мукабасы"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Түз алып көрсөтүү"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Жүктөлүүдө…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Өткөрүп жиберүү"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Алдыга түрүү"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Он секунд алдыга түрүү"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Отуз секунд алдыга түрүү"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Үнсүз"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Тындыруу"</string>
+<string name="cast_play" msgid="5906987965619702702">"Ойнотуу"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Артка түрүү"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Он секунд артка түрүү"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Отуз секунд артка түрүү"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Ойнотуу слайдери"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Кийинки нерсеге өткөрүү"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Мурунку нерсеге өткөрүү"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Токтотуу"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Түз ободогу агымды токтотуу"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Аудио"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Жокко чыгаруу"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Коштомо жазуулар"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"<xliff:g id="POSITION">%1$d</xliff:g>-трек"</string>
+<string name="cast_tracks_chooser_dialog_no_audio_tracks" msgid="5563446400083425854">"Жеткиликтүү аудио тректер жок"</string>
+<string name="cast_tracks_chooser_dialog_no_text_tracks" msgid="7413336699113748535">"Жеткиликтүү текст тректери жок"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Эч бири"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"Жарайт"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Коштомо жазуулар"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Үнүн чыгаруу"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-ky/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Иштетүү"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"Google Play кызматтарын иштетмейиңизче <xliff:g id="APP_NAME">%1$s</xliff:g> иштебейт."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Google Play кызматтарын иштетүү"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Орнотуу"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"Google Play кызматтарысыз <xliff:g id="APP_NAME">%1$s</xliff:g> иштебейт. Алар түзмөгүңүздө жок болуп жатат."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Google Play кызматтарын алуу"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play кызматтарынын катасы"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосу сиздин түзмөгүңүздө колдоого алынбаган Google Play кызматтары болбосо иштебейт."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Жаңыртуу"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"Google Play кызматтары жаңыртылмайынча <xliff:g id="APP_NAME">%1$s</xliff:g> иштебейт."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Google Play кызматтарын жаңыртуу"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"Google Play кызматтарысыз <xliff:g id="APP_NAME">%1$s</xliff:g> иштебейт, алар учурда жаңыртылууда."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Google Play кызматтарынын жаңы версиясы талап кылынат. Бир аздан кийин ал өзү эле жаңыртылат."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Телефондо ачык"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Кирүү"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Google менен кирүү"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-ky/strings.xml -->
+<eat-comment/>
+<string name="accept" msgid="5835639618285370804">"Кабыл алуу"</string>
+<string name="create_calendar_message" msgid="6155048007205742679">"Жарнамада жылнаама окуясы түзүлсүнбү?"</string>
+<string name="create_calendar_title" msgid="7967007864778154790">"Жылнаама окуясын түзүү"</string>
+<string name="debug_menu_ad_information" msgid="4722375419392727435">"Жарнама жөнүндө маалымат"</string>
+<string name="debug_menu_creative_preview" msgid="1605938743055376690">"Жарнама файлын алдын ала көрүү"</string>
+<string name="debug_menu_title" msgid="2039274714455389140">"Мүчүлүштүктөрдү оңдоо режимин тандаңыз"</string>
+<string name="debug_menu_troubleshooting" msgid="1173358804935285568">"Бузулууларды аныктап оңдоо"</string>
+<string name="decline" msgid="6099173376375995052">"Баш тартуу"</string>
+<string name="store_picture_message" msgid="8020323581538738027">"Жарнамадан Сүрөт галереясына сүрөт сакталсынбы?"</string>
+<string name="store_picture_title" msgid="4180630057627064606">"Сүрөттү сактоо"</string>
 </resources>
