--- a/res/values-lt/values.xml
+++ b/res/values-lt/values.xml
@@ -3,4 +3,81 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-lt/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"Naudojant programą „<xliff:g id="APP_NAME">%1$s</xliff:g>“ kilo problemų dėl „Google Play“ paslaugų. Bandykite dar kartą."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-lt/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Prisijungta prie „<xliff:g id="NAME">%1$s</xliff:g>“"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Prisijungiama prie „<xliff:g id="NAME">%1$s</xliff:g>“"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Atsijungti"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-lt/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Skelbimas"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Perduodama į „%1$s“"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Subtitrai"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Subtitrai nepasiekiami"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Atjungti"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Vaizdas, rodomas, kol „Cast“ imtuvas leidžia skelbimą"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Skelbimas apdorojamas…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Albumo viršelis"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Tiesioginė transliacija"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Įkeliama…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Praleisti"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Pirmyn"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Pirmyn dešimt sekundžių"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Pirmyn trisdešimt sekundžių"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Nutildyti"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Pristabdyti"</string>
+<string name="cast_play" msgid="5906987965619702702">"Leisti"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Atsukti atgal"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Atsukti dešimt sekundžių atgal"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Atsukti trisdešimt sekundžių atgal"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Atkūrimo paieškos valdiklis"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Pereiti prie kito elemento"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Pereiti prie ankstesnio elemento"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Sustabdyti"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Sustabdyti tiesioginį srautą"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Garsas"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Atšaukti"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Subtitrai"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"<xliff:g id="POSITION">%1$d</xliff:g> takelis"</string>
+<string name="cast_tracks_chooser_dialog_no_audio_tracks" msgid="5563446400083425854">"Nėra jokių galimų garso takelių"</string>
+<string name="cast_tracks_chooser_dialog_no_text_tracks" msgid="7413336699113748535">"Nėra jokių galimų teksto takelių"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Nėra"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"Gerai"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Subtitrai"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Įjungti garsą"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-lt/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Įgalinti"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ neveiks, jei neįgalinsite „Google Play“ paslaugų."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Įgalinkite „Google Play“ paslaugas"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Įdiegti"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"Programa „<xliff:g id="APP_NAME">%1$s</xliff:g>“ nebus paleidžiama be „Google Play“ paslaugų, kurių nėra įrenginyje."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Gaukite „Google Play“ paslaugas"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"„Google Play“ paslaugų klaida"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"Programa „<xliff:g id="APP_NAME">%1$s</xliff:g>“ nebus paleidžiama be „Google Play“ paslaugų, kurių jūsų įrenginys nepalaiko."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Atnaujinti"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ nebus paleidžiama, jei neatnaujinsite „Google Play“ paslaugų."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Atnaujinkite „Google Play“ paslaugas"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ nebus paleidžiama be „Google Play“ paslaugų, kurios šiuo metu atnaujinamos."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Reikia naujos versijos „Google Play“ paslaugų. Jos netrukus bus atnaujintos."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Atidaryti telefone"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Prisijungti"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Prisijungti naudojant „Google“"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-lt/strings.xml -->
+<eat-comment/>
+<string name="accept" msgid="5835639618285370804">"Priimti"</string>
+<string name="create_calendar_message" msgid="6155048007205742679">"Leisti skelbimui sukurti kalendoriaus įvykį?"</string>
+<string name="create_calendar_title" msgid="7967007864778154790">"Kalendoriaus įvykio kūrimas"</string>
+<string name="debug_menu_ad_information" msgid="4722375419392727435">"Skelbimo informacija"</string>
+<string name="debug_menu_creative_preview" msgid="1605938743055376690">"Skelbimo failo peržiūra"</string>
+<string name="debug_menu_title" msgid="2039274714455389140">"Derinimo režimo pasirinkimas"</string>
+<string name="debug_menu_troubleshooting" msgid="1173358804935285568">"Trikčių šalinimas"</string>
+<string name="decline" msgid="6099173376375995052">"Atmesti"</string>
+<string name="store_picture_message" msgid="8020323581538738027">"Leisti skelbimui išsaugoti vaizdą nuotraukų galerijoje?"</string>
+<string name="store_picture_title" msgid="4180630057627064606">"Vaizdo išsaugojimas"</string>
 </resources>
