--- a/res/values-ml/values.xml
+++ b/res/values-ml/values.xml
@@ -3,4 +3,81 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-ml/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"Google Play സേവനങ്ങളുമായി ബന്ധപ്പെട്ട് <xliff:g id="APP_NAME">%1$s</xliff:g> ആപ്പിനെന്തോ പ്രശ്നമുണ്ട്. വീണ്ടും ശ്രമിക്കുക."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-ml/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"<xliff:g id="NAME">%1$s</xliff:g> എന്നതിലേക്ക് കണക്റ്റുചെയ്‌തു"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"<xliff:g id="NAME">%1$s</xliff:g> എന്നതിലേക്ക് കണക്റ്റുചെയ്യുന്നു"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"വിച്ഛേദിക്കുക"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-ml/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"പരസ്യം"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"%1$s എന്നതിലേക്ക് കാസ്റ്റുചെയ്യുന്നു"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"അടച്ച അടിക്കുറിപ്പുകൾ"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"അടച്ച അടിക്കുറിപ്പുകൾ ലഭ്യമല്ല"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"വിച്ഛേദിക്കുക"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"കാസ്റ്റ് റിസീവർ ഒരു പരസ്യം പ്ലേ ചെയ്യുന്ന സമയത്ത് കാണിക്കുന്ന ചിത്രം"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"പരസ്യം പുരോഗതിയിൽ…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"ആൽബം ആർട്ട്"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"തൽസമയ സ്‌ട്രീം"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"ലോഡുചെയ്യുന്നു..."</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"ഒഴിവാക്കുക"</string>
+<string name="cast_forward" msgid="7884080323096468593">"കൈമാറുക"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"പത്ത് സെക്കൻഡ് ഫോർവേഡ്"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"മുപ്പത് സെക്കൻഡ് ഫോർവേഡ്"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"മ്യൂട്ടുചെയ്യുക"</string>
+<string name="cast_pause" msgid="5308503786390460607">"തൽക്കാലം നിർത്തുക"</string>
+<string name="cast_play" msgid="5906987965619702702">"പ്ലേ ചെയ്യുക"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"റിവൈൻഡുചെയ്യുക"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"പത്ത് സെക്കൻഡ് റി‌വൈൻഡ്"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"മുപ്പത് സെക്കൻഡ് റി‌വൈൻഡ്"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"പ്ലേബാക്ക് സീക്ക് നിയന്ത്രണം"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"അടുത്ത ഇനത്തിലേക്ക് പോവുക"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"മുമ്പത്തെ ഇനത്തിലേക്ക് പോവുക"</string>
+<string name="cast_stop" msgid="9191388946729723891">"നിർത്തുക"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"തത്സമയ സ്ട്രീം നിർത്തുക"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"ഓഡിയോ"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"റദ്ദാക്കുക"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"സബ്‌ടൈറ്റിലുകൾ"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"<xliff:g id="POSITION">%1$d</xliff:g> ട്രാക്കുചെയ്യുക"</string>
+<string name="cast_tracks_chooser_dialog_no_audio_tracks" msgid="5563446400083425854">"ഓഡിയോ ട്രാക്കുകളൊന്നും ലഭ്യമല്ല"</string>
+<string name="cast_tracks_chooser_dialog_no_text_tracks" msgid="7413336699113748535">"ടെക്സ്റ്റ് ട്രാക്കുകളൊന്നും ലഭ്യമല്ല"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"ഒന്നുമില്ല"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"ശരി"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"സബ്‌ടൈറ്റിലുകൾ"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"അൺമ്യൂട്ടുചെയ്യുക"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-ml/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"പ്രവർത്തനക്ഷമമാക്കുക"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"നിങ്ങൾ Google Play സേവനങ്ങൾ പ്രവർത്തനക്ഷമമാക്കുന്നില്ലെങ്കിൽ <xliff:g id="APP_NAME">%1$s</xliff:g> പ്രവർത്തിക്കില്ല."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Google Play സേവനങ്ങൾ പ്രവർത്തനക്ഷമമാക്കുക"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"ഇന്‍സ്റ്റാള്‍ ചെയ്യുക"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"Google Play സേവനങ്ങളില്ലാതെ <xliff:g id="APP_NAME">%1$s</xliff:g> പ്രവർത്തിക്കില്ല, ഈ സേവനങ്ങളാകട്ടെ നിങ്ങളുടെ ഉപകരണത്തിൽ ഇല്ല."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Google Play സേവനങ്ങൾ നേടുക"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play സേവനങ്ങളിലെ പിശക്"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"Google Play സേവനങ്ങളില്ലാതെ <xliff:g id="APP_NAME">%1$s</xliff:g> പ്രവർത്തിക്കില്ല, സേവനങ്ങളെയാകട്ടെ നിങ്ങളുടെ ഉപകരണം പിന്തുണയ്ക്കുന്നുമില്ല."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"അപ്‌ഡേറ്റുചെയ്യുക"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"നിങ്ങൾ Google Play സേവനങ്ങൾ അപ്‌ഡേറ്റുചെയ്‌തില്ലെങ്കിൽ <xliff:g id="APP_NAME">%1$s</xliff:g> പ്രവർത്തിക്കില്ല."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Google Play സേവനങ്ങൾ അപ്‌ഡേറ്റുചെയ്യുക"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"നിലവിൽ അപ്‌ഡേറ്റുചെയ്യുന്ന Google Play സേവനങ്ങൾ ഇല്ലാതെ <xliff:g id="APP_NAME">%1$s</xliff:g> പ്രവർത്തിക്കില്ല."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Google Play സേവനങ്ങളുടെ പുതിയ പതിപ്പ് ആവശ്യമാണ്. താമസിയാതെ ഇത് സ്വയം അപ്‌ഡേറ്റുചെയ്യും."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"ഫോണിൽ തുറക്കുക"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"സൈൻ ഇൻ ചെയ്യുക"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Google ഉപയോഗിച്ച് സൈൻ ഇൻ ചെയ്യുക"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-ml/strings.xml -->
+<eat-comment/>
+<string name="accept" msgid="5835639618285370804">"അംഗീകരിക്കുക"</string>
+<string name="create_calendar_message" msgid="6155048007205742679">"ഒരു കലണ്ടർ ഇവന്റ് സൃഷ്ടിക്കാൻ പരസ്യത്തെ അനുവദിക്കണോ?"</string>
+<string name="create_calendar_title" msgid="7967007864778154790">"കലണ്ടർ ഇവന്റ് സൃഷ്ടിക്കുക"</string>
+<string name="debug_menu_ad_information" msgid="4722375419392727435">"പരസ്യ വിവരങ്ങൾ"</string>
+<string name="debug_menu_creative_preview" msgid="1605938743055376690">"ക്രിയേറ്റീവ് പ്രിവ്യൂ"</string>
+<string name="debug_menu_title" msgid="2039274714455389140">"ഡീബഗ് മോഡ് തിരഞ്ഞെടുക്കുക"</string>
+<string name="debug_menu_troubleshooting" msgid="1173358804935285568">"പ്രശ്‌നപരിഹാരം"</string>
+<string name="decline" msgid="6099173376375995052">"നിരസിക്കുക"</string>
+<string name="store_picture_message" msgid="8020323581538738027">"ചിത്ര ഗാലറിയിൽ ചിത്രം സംഭരിക്കാൻ പരസ്യത്തെ അനുവദിക്കണോ?"</string>
+<string name="store_picture_title" msgid="4180630057627064606">"ചിത്രം സംരക്ഷിക്കുക"</string>
 </resources>
