--- a/res/values-my/values.xml
+++ b/res/values-my/values.xml
@@ -3,4 +3,81 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-my/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် Google Play ဝန်ဆောင်မှုများနှင့် ပြဿနာအနည်းငယ် ရှိနေပါသည်။ ထပ်လုပ်ကြည့်ပါ။"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-my/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"<xliff:g id="NAME">%1$s</xliff:g> သို့ ချိတ်ဆက်ပြီးပါပြီ"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"<xliff:g id="NAME">%1$s</xliff:g> သို့ချိတ်ဆက်နေသည်"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"ချိတ်ဆက်မှုဖြုတ်ပါ"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-my/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Ad"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"%1$s သို့ကာစ်တ်လုပ်နေသည်"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"စာတန်းထိုးများ"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"စာတန်းထိုး မရနိုင်ပါ"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"ဆက်သွယ်မှုဖြုတ်ပါ"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"ကာ့စ်လက်ခံကိရိယာက ကြော်ငြာဖွင့်နေစဉ် ပြသသော ပုံ"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Ad လုပ်ဆောင်နေဆဲ…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"အယ်လ်ဘမ်ပုံ"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"တိုက်ရိုက်ထုတ်လွှင့်မှု"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"ဖွင့်နေသည်…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"ကျော်ရန်"</string>
+<string name="cast_forward" msgid="7884080323096468593">"အရှေ့သို့ရစ်ပါ"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"အရှေ့သို့ ဆယ်စက္ကန့် ရစ်ပါ"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"အရှေ့သို့ စက္ကန့်သုံးဆယ် ရစ်ပါ"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"အသံပိတ်ပါ"</string>
+<string name="cast_pause" msgid="5308503786390460607">"ခဏရပ်ပါ"</string>
+<string name="cast_play" msgid="5906987965619702702">"ဖွင့်ပါ"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"အနောက်သို့ရစ်ပါ"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"အနောက်သို့ ဆယ်စက္ကန့် ပြန်ရစ်ပါ"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"အနောက်သို့ စက္ကန့်သုံးဆယ် ပြန်ရစ်ပါ"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"ဖွင့်ခြင်းဆိုင်ရာ ရှာဖွေခြင်း ထိန်းချုပ်မှု"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"နောက်တစ်ခုသို့ ကျော်ပါ"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"ပြီးခဲ့သည့်တစ်ခုသို့ ပြန်သွားပါ"</string>
+<string name="cast_stop" msgid="9191388946729723891">"ရပ်ပါ"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"တိုက်ရိုက်ထုတ်လွှင့်ခြင်းကို ရပ်ပါ"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"အသံ"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"မလုပ်တော့"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"စာတန်းထိုးများ"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"အပုဒ်ရေ <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_no_audio_tracks" msgid="5563446400083425854">"မည်သည့် သီချင်းမျှမရှိပါ"</string>
+<string name="cast_tracks_chooser_dialog_no_text_tracks" msgid="7413336699113748535">"မည်သည့်စာသားမျှ မရှိပါ"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"မရှိပါ"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"အိုကေ"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"စာတန်းထိုးများ"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"အသံပြန်ဖွင့်ပါ"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-my/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"ဖွင့်ရန်"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"Google Play ဝန်ဆောင်မှုများကို မဖွင့်သ၍ <xliff:g id="APP_NAME">%1$s</xliff:g> သည်အလုပ်လုပ်မည်မဟုတ်ပါ။"</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Google Play ဝန်ဆောင်မှုများ ဖွင့်ရန်"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"ထည့်သွင်းပါ"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"သင့်တက်ဘလက်တွင် Google Play ဝန်ဆောင်မှုများမရှိသောကြောင့် <xliff:g id="APP_NAME">%1$s</xliff:g> ကိုဖွင့်၍မရပါ။"</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Google Play ဝန်ဆောင်မှုများရယူရန်"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play ဝန်ဆောင်မှုများ အမှား"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"Google Play ဝန်ဆောင်မှုများကို သင့်စက်ပစ္စည်းတွင် ပံ့ပိုးမထားသည့်အတွက် ၎င်းမရှိဘဲ <xliff:g id="APP_NAME">%1$s</xliff:g> ကို ဖွင့်၍မရပါ။"</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"အပ်ဒိတ်"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"Google Play ဝန်ဆောင်မှုများအား အပ်ဒိတ်မလုပ်ပါက <xliff:g id="APP_NAME">%1$s</xliff:g> အလုပ်လုပ်မည် မဟုတ်ပါ။"</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Google Play ဝန်ဆောင်မှုများကို အပ်ဒိတ်လုပ်ရန်"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"Google Play ဝန်ဆောင်မှုများကို လက်ရှိအပ်ဒိတ်လုပ်နေသောကြောင့် <xliff:g id="APP_NAME">%1$s</xliff:g> ကိုဖွင့်၍ရမည်မဟုတ်ပါ။"</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Google Play ဝန်ဆောင်မှုဗားရှင်းအသစ်များ လိုအပ်နေသည်။ အချိန်အနည်းငယ်အကြာတွင် ၎င်းကိုယ်တိုင်အပ်ဒိတ်လုပ်ပါ လိမ့်မည်။"</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"ဖုန်းပေါ်မှာ ဖွင့်ပါ"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"လက်မှတ်ထိုး ဝင်ရန်"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Google ဖြင့် လက်မှတ်ထိုးဝင်ရေ"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-my/strings.xml -->
+<eat-comment/>
+<string name="accept" msgid="5835639618285370804">"လက်ခံရန်"</string>
+<string name="create_calendar_message" msgid="6155048007205742679">"Ad အား ပြက္ခဒိန်ပေါ်၌ ပွဲအစီအစဉ်တစ်ခုကို ဖန်တီးခွင့်ပြုမှာလား။"</string>
+<string name="create_calendar_title" msgid="7967007864778154790">"ပြက္ခဒိန်ပေါ်တွင် ပွဲအစီအစဉ် ဖန်တီးပါ"</string>
+<string name="debug_menu_ad_information" msgid="4722375419392727435">"ကြော်ငြာအချက်အလက်များ"</string>
+<string name="debug_menu_creative_preview" msgid="1605938743055376690">"တီထွင်ဖန်တီးစွမ်းရှိသည့် အစမ်းကြည့်ရှုမှု"</string>
+<string name="debug_menu_title" msgid="2039274714455389140">"အမှားရှာပြင်သည့် စနစ်တစ်ခုကို ရွေးချယ်ပါ"</string>
+<string name="debug_menu_troubleshooting" msgid="1173358804935285568">"ပြဿနာရှာဖွေဖြေရှင်းခြင်း"</string>
+<string name="decline" msgid="6099173376375995052">"ငြင်းပယ်ရန်"</string>
+<string name="store_picture_message" msgid="8020323581538738027">"Ad အား ဓာတ်ပုံကို ရုပ်ပုံပြခန်းတွင် သိမ်းခွင့်ပြုမှာလား။"</string>
+<string name="store_picture_title" msgid="4180630057627064606">"ဓာတ်ပုံကို သိမ်းပါ"</string>
 </resources>
