--- a/res/values-pa/values.xml
+++ b/res/values-pa/values.xml
@@ -3,4 +3,81 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-pa/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> ਨੂੰ Google Play ਸੇਵਾਵਾਂ ਨਾਲ ਸਮੱਸਿਆ ਆ ਰਹੀ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ।"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-pa/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"<xliff:g id="NAME">%1$s</xliff:g> ਨਾਲ ਕਨੈਕਟ ਕੀਤਾ ਗਿਆ"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"<xliff:g id="NAME">%1$s</xliff:g> ਨਾਲ ਕਨੈਕਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"ਡਿਸਕਨੈਕਟ ਕਰੋ"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-pa/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"ਇਸ਼ਤਿਹਾਰ"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"%1$s \'ਤੇ ਕਾਸਟ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"ਬੰਦ ਸੁਰਖੀਆਂ"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"ਬੰਦ ਸੁਰਖੀਆਂ ਅਣਉਪਲਬਧ ਹਨ"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"ਡਿਸਕਨੈਕਟ ਕਰੋ"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"ਇਹ ਚਿੱਤਰ ਕਾਸਟ ਰਿਸੀਵਰ ਵੱਲੋਂ ਕੋਈ ਇਸ਼ਤਿਹਾਰ ਚਲਾਏ ਜਾਣ ਦੌਰਾਨ ਵਿਖਾਇਆ ਜਾਂਦਾ ਹੈ"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"ਇਸ਼ਤਿਹਾਰ ਚੱਲ ਰਿਹਾ ਹੈ..."</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"ਐਲਬਮ ਆਰਟ"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"ਲਾਈਵ ਸਟ੍ਰੀਮ"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"ਲੋਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"ਛੱਡੋ"</string>
+<string name="cast_forward" msgid="7884080323096468593">"ਅੱਗੇ ਕਰੋ"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"ਦਸ ਸਕਿੰਟ ਅੱਗੇ ਕਰੋ"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"ਤੀਹ ਸਕਿੰਟ ਅੱਗੇ ਕਰੋ"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"ਮਿਊਟ ਕਰੋ"</string>
+<string name="cast_pause" msgid="5308503786390460607">"ਰੋਕੋ"</string>
+<string name="cast_play" msgid="5906987965619702702">"ਚਲਾਓ"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"ਪਿੱਛੇ ਕਰੋ"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"ਦਸ ਸਕਿੰਟ ਪਿੱਛੇ ਕਰੋ"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"ਤੀਹ ਸਕਿੰਟ ਪਿੱਛੇ ਕਰੋ"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"ਪਲੇਬੈਕ ਸੀਕ ਕੰਟਰੋਲ"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"ਅਗਲੀ ਆਈਟਮ \'ਤੇ ਜਾਓ"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"ਪਿਛਲੀ ਆਈਟਮ \'ਤੇ ਜਾਓ"</string>
+<string name="cast_stop" msgid="9191388946729723891">"ਰੋਕੋ"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"ਲਾਈਵ ਸਟ੍ਰੀਮ ਬੰਦ ਕਰੋ"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"ਔਡੀਓ"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"ਰੱਦ ਕਰੋ"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"ਬੰਦ ਸੁਰਖੀਆਂ"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"ਟਰੈਕ <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_no_audio_tracks" msgid="5563446400083425854">"ਕੋਈ ਔਡੀਓ ਟਰੈਕ ਉਪਲਬਧ ਨਹੀਂ ਹਨ"</string>
+<string name="cast_tracks_chooser_dialog_no_text_tracks" msgid="7413336699113748535">"ਕੋਈ ਟੈਕਸਟ ਟਰੈਕ ਉਪਲਬਧ ਨਹੀਂ ਹਨ"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"ਕੋਈ ਨਹੀਂ"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"ਠੀਕ"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"ਉਪਸਿਰਲੇਖ"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"ਅਣਮਿਊਟ ਕਰੋ"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-pa/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"ਯੋਗ ਬਣਾਓ"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> ਕੰਮ ਨਹੀਂ ਕਰੇਗਾ ਜਦੋਂ ਤੱਕ ਤੁਸੀਂ Google Play ਸੇਵਾਵਾਂ ਨੂੰ ਯੋਗ ਨਹੀਂ ਬਣਾਉਂਦੇ ਹੋ।"</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Google Play ਸੇਵਾਵਾਂ ਨੂੰ ਯੋਗ ਬਣਾਓ"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"ਸਥਾਪਤ ਕਰੋ"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> Google Play ਸੇਵਾਵਾਂ ਤੋਂ ਬਿਨਾਂ ਨਹੀਂ ਚੱਲੇਗੀ, ਜੋ ਤੁਹਾਡੀ ਡੀਵਾਈਸ ਤੋਂ ਗੁੰਮ ਹਨ।"</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Google Play ਸੇਵਾਵਾਂ ਪ੍ਰਾਪਤ ਕਰੋ"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play ਸੇਵਾਵਾਂ ਅਸ਼ੁੱਧੀ"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> Google Play ਸੇਵਾਵਾਂ ਤੋਂ ਬਿਨਾਂ ਨਹੀਂ ਚੱਲ ਸਕੇਗੀ, ਜੋ ਤੁਹਾਡੀ ਡੀਵਾਈਸ \'ਤੇ ਸਮਰਥਿਤ ਨਹੀਂ ਹਨ।"</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"ਅੱਪਡੇਟ ਕਰੋ"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> ਨਹੀਂ ਚੱਲੇਗਾ ਜਦੋਂ ਤੱਕ ਤੁਸੀਂ Google Play ਸੇਵਾਵਾਂ ਨੂੰ ਅਪਡੇਟ ਨਹੀਂ ਕਰਦੇ।"</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Google Play ਸੇਵਾਵਾਂ ਨੂੰ ਅੱਪਡੇਟ ਕਰੋ"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> Google Play ਸੇਵਾਵਾਂ ਤੋਂ ਬਿਨਾਂ ਨਹੀਂ ਚੱਲੇਗਾ, ਜੋ ਵਰਤਮਾਨ ਵਿੱਚ ਅਪਡੇਟ ਹੋ ਰਹੀਆਂ ਹਨ।"</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Google Play ਸੇਵਾਵਾਂ ਦੇ ਨਵਾਂ ਸੰਸਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਇਹ ਛੇਤੀ ਹੀ ਆਪਣੇ ਆਪ ਅਪਡੇਟ ਕਰੇਗਾ।"</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"ਫ਼ੋਨ \'ਤੇ ਖੋਲ੍ਹੋ"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"ਸਾਈਨ ਇਨ ਕਰੇ"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Google ਨਾਲ ਸਾਈਨ ਇਨ ਕਰੋ"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-pa/strings.xml -->
+<eat-comment/>
+<string name="accept" msgid="5835639618285370804">"ਸਵੀਕਾਰ ਕਰੋ"</string>
+<string name="create_calendar_message" msgid="6155048007205742679">"ਕੀ ਇਸ਼ਤਿਹਾਰ ਨੂੰ ਇੱਕ ਕੈਲੰਡਰ ਵਰਤਾਰਾ ਬਣਾਉਣ ਦੀ ਆਗਿਆ ਦੇਣੀ ਹੈ?"</string>
+<string name="create_calendar_title" msgid="7967007864778154790">"ਕੈਲੰਡਰ ਵਰਤਾਰਾ ਬਣਾਓ"</string>
+<string name="debug_menu_ad_information" msgid="4722375419392727435">"ਇਸ਼ਤਿਹਾਰ ਜਾਣਕਾਰੀ"</string>
+<string name="debug_menu_creative_preview" msgid="1605938743055376690">"ਸਿਰਜਣਾਤਮਕ ਪੂਰਵ-ਝਲਕ"</string>
+<string name="debug_menu_title" msgid="2039274714455389140">"ਕੋਈ ਡੀਬੱਗ ਮੋਡ ਚੁਣੋ"</string>
+<string name="debug_menu_troubleshooting" msgid="1173358804935285568">"ਸਮੱਸਿਆ ਹੱਲ ਕਰਨਾ"</string>
+<string name="decline" msgid="6099173376375995052">"ਅਸਵੀਕਾਰ ਕਰੋ"</string>
+<string name="store_picture_message" msgid="8020323581538738027">"ਕੀ ਇਸ਼ਤਿਹਾਰ ਨੂੰ ਤਸਵੀਰ ਗੈਲਰੀ ਵਿੱਚ ਚਿੱਤਰ ਸਟੋਰ ਕਰਨ ਦੀ ਆਗਿਆ ਦੇਣੀ ਹੈ?"</string>
+<string name="store_picture_title" msgid="4180630057627064606">"ਚਿੱਤਰ ਰੱਖਿਅਤ ਕਰੋ"</string>
 </resources>
