--- a/res/values-pl/values.xml
+++ b/res/values-pl/values.xml
@@ -3,4 +3,81 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-pl/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> ma problem z dostępem do Usług Google Play. Spróbuj jeszcze raz."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-pl/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Połączono z <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Łączę z <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Odłącz"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-pl/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Reklama"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Przesyłam na: %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Napisy"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Napisy są niedostępne"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Odłącz"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Obraz wyświetlany, gdy odbiornik przesyłanych danych odtwarza reklamę"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Trwa wyświetlanie reklamy…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Okładka albumu"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Transmisja na żywo"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Ładuję…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Pomiń"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Przewiń do przodu"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Przewiń do przodu o 10 sekund"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Przewiń do przodu o 30 sekund"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Wycisz"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Wstrzymaj"</string>
+<string name="cast_play" msgid="5906987965619702702">"Odtwórz"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Przewiń do tyłu"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Przewiń do tyłu o 10 sekund"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Przewiń do tyłu o 30 sekund"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Element sterujący odtwarzania/przewijania"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Przeskocz do następnego elementu"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Przeskocz do poprzedniego elementu"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Zatrzymaj"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Zatrzymaj transmisję na żywo"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Dźwięk"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Anuluj"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Napisy"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Punkt filmu <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_no_audio_tracks" msgid="5563446400083425854">"Brak dostępnych ścieżek audio"</string>
+<string name="cast_tracks_chooser_dialog_no_text_tracks" msgid="7413336699113748535">"Brak dostępnych ścieżek z napisami"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Brak"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"OK"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Napisy"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Wyłącz wyciszenie"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-pl/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Włącz"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> nie będzie działać, jeśli nie włączysz Usług Google Play."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Włącz Usługi Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Zainstaluj"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> nie będzie działać, jeśli nie zainstalujesz na urządzeniu Usług Google Play."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Pobierz Usługi Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Błąd Usług Google Play"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> nie będzie działać bez Usług Google Play, które nie są obecnie obsługiwane przez urządzenie."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Aktualizuj"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> nie będzie działać, jeśli nie zaktualizujesz Usług Google Play."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Zaktualizuj Usługi Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> nie będzie działać bez Usług Google Play, które są obecnie aktualizowane."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Wymagana jest nowa wersja Usług Google Play. Wkrótce nastąpi automatyczna aktualizacja."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Otwórz na telefonie"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Zaloguj się"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Zaloguj się przez Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-pl/strings.xml -->
+<eat-comment/>
+<string name="accept" msgid="5835639618285370804">"Akceptuj"</string>
+<string name="create_calendar_message" msgid="6155048007205742679">"Zezwolić reklamie na utworzenie wydarzenia w kalendarzu?"</string>
+<string name="create_calendar_title" msgid="7967007864778154790">"Utwórz wydarzenie w kalendarzu"</string>
+<string name="debug_menu_ad_information" msgid="4722375419392727435">"Informacje o reklamie"</string>
+<string name="debug_menu_creative_preview" msgid="1605938743055376690">"Podgląd kreacji"</string>
+<string name="debug_menu_title" msgid="2039274714455389140">"Wybierz tryb debugowania"</string>
+<string name="debug_menu_troubleshooting" msgid="1173358804935285568">"Rozwiązywanie problemów"</string>
+<string name="decline" msgid="6099173376375995052">"Odrzuć"</string>
+<string name="store_picture_message" msgid="8020323581538738027">"Zezwolić reklamie na zapisanie obrazu w galerii zdjęć?"</string>
+<string name="store_picture_title" msgid="4180630057627064606">"Zapisz obraz"</string>
 </resources>
