--- a/res/values-sl/values.xml
+++ b/res/values-sl/values.xml
@@ -3,4 +3,81 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-sl/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> ima težave s storitvami Google Play. Poskusite znova."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-sl/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Vzpostavljena povezava z zaslonom <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Povezovanje z zaslonom <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Prekini povezavo"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-sl/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Oglas"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Predvajanje v: %s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Podnapisi"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Podnapisi niso na voljo"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Prekini povezavo"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Slika, ki je uporabniku prikazana med predvajanjem oglasa"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Oglas v teku …"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Naslovnica albuma"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Pretočno predvajanje v živo"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Nalaganje …"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Preskoči"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Previj naprej"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Previj za 10 sekund naprej"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Previj za 30 sekund naprej"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Izklop zvoka"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Zaustavitev"</string>
+<string name="cast_play" msgid="5906987965619702702">"Predvajanje"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Previj nazaj"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Previj za 10 sekund nazaj"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Previj za 30 sekund nazaj"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Drsnik za predvajanje"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Skoči na naslednji element"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Skoči na prejšnji element"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Ustavi"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Ustavi pretočno predvajanje v živo"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Zvok"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Prekliči"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Podnapisi"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Skladba št. <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_no_audio_tracks" msgid="5563446400083425854">"Noben zvočni posnetek ni na voljo."</string>
+<string name="cast_tracks_chooser_dialog_no_text_tracks" msgid="7413336699113748535">"Noben posnetek z besedilom ni na voljo."</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Brez"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"V redu"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Podnapisi"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Vklop zvoka"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-sl/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Omogoči"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> ne bo delovala, če ne omogočite storitev Google Play."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Omogočanje storitev Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Namesti"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> ne deluje brez storitev Google Play, vendar teh ni v napravi."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Namestitev storitev Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Napaka storitev Google Play"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> ne deluje brez storitev Google Play, ki jih vaša naprava ne podpira."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Posodobi"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> ne bo delovala, če ne posodobite storitev Google Play."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Posodobitev storitev Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> ne deluje brez storitev Google Play, ki se trenutno posodabljajo."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Potrebujete novo različico storitev Google Play. V kratkem se bodo posodobile."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Odpiranje v telefonu"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Prijava"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Prijava z Google Računom"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-sl/strings.xml -->
+<eat-comment/>
+<string name="accept" msgid="5835639618285370804">"Sprejem"</string>
+<string name="create_calendar_message" msgid="6155048007205742679">"Ali dovolite, da oglas ustvari koledarski dogodek?"</string>
+<string name="create_calendar_title" msgid="7967007864778154790">"Ustvarjanje koledarskega dogodka"</string>
+<string name="debug_menu_ad_information" msgid="4722375419392727435">"Podatki o oglasu"</string>
+<string name="debug_menu_creative_preview" msgid="1605938743055376690">"Predogled datotek oglasa"</string>
+<string name="debug_menu_title" msgid="2039274714455389140">"Izbira načina za odpravljanje napak"</string>
+<string name="debug_menu_troubleshooting" msgid="1173358804935285568">"Odpravljanje težav"</string>
+<string name="decline" msgid="6099173376375995052">"Zavrnitev"</string>
+<string name="store_picture_message" msgid="8020323581538738027">"Ali dovolite, da oglas shrani sliko v galeriji slik?"</string>
+<string name="store_picture_title" msgid="4180630057627064606">"Shranjevanje slike"</string>
 </resources>
