--- a/res/values-af/values.xml
+++ b/res/values-af/values.xml
@@ -3,4 +3,75 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-af/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> ondervind probleme met Google Play Dienste. Probeer asseblief weer."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-af/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Gekoppel aan <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Koppel tans aan <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Ontkoppel"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-af/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Advertensie"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Saai tans uit na %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Onderskrifte"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Onderskrifte is onbeskikbaar"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Ontkoppel"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Prent wat gewys word wanneer die uitsaai-ontvanger \'n advertensie speel"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Onvoltooide advertensie …"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Albumkunswerk"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Regstreekse stroming"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Laai tans …"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Slaan oor"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Spoel vorentoe"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Spoel 10 sekondes vorentoe"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Spoel 30 sekondes vorentoe"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Demp"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Laat wag"</string>
+<string name="cast_play" msgid="5906987965619702702">"Speel"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Spoel terug"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Spoel tien sekondes terug"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Spoel dertig sekondes terug"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Speelsoekkontrole"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Slaan oor na volgende item"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Slaan oor na vorige item"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Stop"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Stop regstreekse stroom"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Oudio"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Kanselleer"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Onderskrifte"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Snit <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Geen"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"OK"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Onderskrifte"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Ontdemp"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-af/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Aktiveer"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> sal nie werk nie tensy jy Google Play-dienste aktiveer."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Aktiveer Google Play-dienste"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Installeer"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> sal nie sonder Google Play Dienste werk nie, wat nie op jou toestel is nie."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Kry Google Play-dienste"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play Services-fout"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> sal nie werk sonder Google Play Dienste nie, wat nie deur jou toestel gesteun word nie."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Dateer op"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> sal nie werk nie tensy jy Google Play Dienste opdateer."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Dateer Google Play-dienste op"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> sal nie sonder Google Play-dienste werk nie, wat tans opdateer."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Nuwe weergawe van Google Play-dienste is nodig. Dit sal binnekort self opdateer."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Maak oop op foon"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Meld aan"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Meld aan met Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-af/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Stoor prent"</string>
+<string name="s2" msgid="4550830452390689489">"Laat advertensie toe om prent in Prentgalery te stoor?"</string>
+<string name="s3" msgid="2435407834265420668">"Aanvaar"</string>
+<string name="s4" msgid="9167523597401839819">"Wys af"</string>
+<string name="s5" msgid="1566682516266724847">"Skep kalendergeleentheid"</string>
+<string name="s6" msgid="5996672174517137271">"Laat advertensie toe om \'n kalendergeleentheid te skep?"</string>
 </resources>
