--- a/res/values-hu/values.xml
+++ b/res/values-hu/values.xml
@@ -3,4 +3,75 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-hu/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"A(z) <xliff:g id="APP_NAME">%1$s</xliff:g> alkalmazás problémába ütközött a Google Play-szolgáltatások használata során. Próbálkozzon újra."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-hu/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Csatlakozva a következőhöz: <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Csatlakozás a következőhöz: <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Leválasztás"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-hu/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Hirdetés"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Átküldés ide: %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Feliratok"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"A feliratok nem érhetők el"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Szétválasztás"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Ez a kép látható, amíg a Cast-erősítő hirdetést jelenít meg"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Hirdetés folyamatban…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Lemezborító"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Élő közvetítés"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Betöltés…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Átugrás"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Előretekerés"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Előretekerés tíz másodperccel"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Előretekerés harminc másodperccel"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Némítás"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Szüneteltetés"</string>
+<string name="cast_play" msgid="5906987965619702702">"Lejátszás"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Visszatekerés"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Visszatekerés tíz másodperccel"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Visszatekerés 30 másodperccel"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Lejátszási keresősáv"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Ugrás a következő elemre"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Ugrás az előző elemre"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Leállítás"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Élő közvetítés leállítása"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Hang"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Mégse"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Feliratok"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"<xliff:g id="POSITION">%1$d</xliff:g> követése"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Nincs"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"OK"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Feliratok"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Némítás feloldása"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-hu/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Engedélyezés"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"A(z) <xliff:g id="APP_NAME">%1$s</xliff:g> alkalmazás csak akkor működik, ha  engedélyezi a Google Play-szolgáltatásokat."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Google Play-szolgáltatások engedélyezése"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Telepítés"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"A(z) <xliff:g id="APP_NAME">%1$s</xliff:g> alkalmazás nem fut a Google Play-szolgáltatások nélkül, amelyek hiányoznak az eszközről."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"A Google Play-szolgáltatások beszerzése"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Google Play-szolgáltatások – hiba"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"A(z) <xliff:g id="APP_NAME">%1$s</xliff:g> alkalmazás nem fut a Google Play-szolgáltatások nélkül, amelyeket eszköze nem támogat."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Frissítés"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"A(z) <xliff:g id="APP_NAME">%1$s</xliff:g> alkalmazás csak akkor fog működni, ha frissíti a Google Play-szolgáltatásokat."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"A Google Play-szolgáltatások frissítése"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"A(z) <xliff:g id="APP_NAME">%1$s</xliff:g> alkalmazás nem fut a Google Play-szolgáltatások nélkül, amelyek frissítése folyamatban van."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"A Google Play-szolgáltatások új verziójára van szükség. A szolgáltatás hamarosan frissíti önmagát."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Megnyitás a telefonon"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Bejelentkezés"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Bejelentkezés Google-fiókkal"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-hu/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Kép mentése"</string>
+<string name="s2" msgid="4550830452390689489">"Engedélyezi a hirdetés számára a kép tárolását a Képgalériában?"</string>
+<string name="s3" msgid="2435407834265420668">"Elfogadás"</string>
+<string name="s4" msgid="9167523597401839819">"Elutasítás"</string>
+<string name="s5" msgid="1566682516266724847">"Naptáresemény létrehozása"</string>
+<string name="s6" msgid="5996672174517137271">"Engedélyezi a hirdetés számára naptáresemény létrehozását?"</string>
 </resources>
