--- a/res/values-iw/values.xml
+++ b/res/values-iw/values.xml
@@ -3,4 +3,75 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-iw/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"‏<xliff:g id="APP_NAME">%1$s</xliff:g> נתקלה בבעיה בשירותי Google Play. נסה שוב."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-iw/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"מחובר אל <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"מתחבר אל <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"נתק"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-iw/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"מודעה"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"‏מעביר אל %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"כתוביות"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"הכתוביות אינן זמינות"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"נתק"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"‏התמונה מוצגת בזמן שמקלט Cast מפעיל מודעה"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"מודעה בתהליך..."</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"עטיפת אלבום"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"זרם בשידור חי"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"טוען…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"דלג"</string>
+<string name="cast_forward" msgid="7884080323096468593">"העבר"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"העבר עשר שניות קדימה"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"העבר 30 שניות קדימה"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"השתק"</string>
+<string name="cast_pause" msgid="5308503786390460607">"השהה"</string>
+<string name="cast_play" msgid="5906987965619702702">"הפעל"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"העבר לאחור"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"העבר עשר שניות לאחור"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"העבר 30 שניות לאחור"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"פקד חיפוש הפעלה"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"דלג אל הפריט הבא"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"דלג לפריט הקודם"</string>
+<string name="cast_stop" msgid="9191388946729723891">"עצור"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"עצור סטרימינג בשידור חי"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"אודיו"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"בטל"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"כתוביות"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"רצועה <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"אף אחת"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"אישור"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"כתוביות"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"בטל השתקה"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-iw/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"הפעל"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"‏האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> לא תפעל אם לא תפעיל את שירותי Google Play."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"‏הפעל את שירותי Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"התקן"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"‏האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> לא תפעל ללא שירותי Google Play, שאינם מותקנים במכשיר."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"‏קבל את שירותי Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"‏שגיאה בשירותי Google Play"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"‏<xliff:g id="APP_NAME">%1$s</xliff:g> לא תפעל ללא שירותי Google Play, שאינם נתמכים במכשיר שלך."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"עדכן"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"‏<xliff:g id="APP_NAME">%1$s</xliff:g> לא יפעל אם לא תעדכן את שירותי Google Play."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"‏עדכון שירותי Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"‏האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> לא תפעל ללא שירותי Google Play, שמתעדכנים כרגע."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"‏דרושה גרסה חדשה של שירותי Google Play. הגרסה תתעדכן בעצמה תוך זמן קצר."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"פתח בטלפון"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"היכנס"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"‏היכנס באמצעות Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-iw/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"שמור את התמונה"</string>
+<string name="s2" msgid="4550830452390689489">"האם לאפשר למודעה לאחסן תמונה בגלריית התמונות?"</string>
+<string name="s3" msgid="2435407834265420668">"קבל"</string>
+<string name="s4" msgid="9167523597401839819">"דחה"</string>
+<string name="s5" msgid="1566682516266724847">"צור אירוע ביומן"</string>
+<string name="s6" msgid="5996672174517137271">"האם לאפשר למודעה ליצור אירוע ביומן?"</string>
 </resources>
