--- a/res/values-ru/values.xml
+++ b/res/values-ru/values.xml
@@ -3,4 +3,75 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-ru/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"Приложению \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" не удается подключиться к сервисам Google Play. Повторите попытку."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-ru/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Подключено к <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Подключение к <xliff:g id="NAME">%1$s</xliff:g>…"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Отключить"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-ru/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Объявление"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Трансляция на устройство \"%s\""</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Субтитры"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Субтитры недоступны"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Отключить"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Изображение, показанное во время трансляции объявления"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Трансляция объявления…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Обложка"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Прямой эфир"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Загрузка…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Пропустить"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Перемотать вперед"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Перемотать на 10 секунд вперед"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Перемотать на 30 секунд вперед"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Отключить звук"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Приостановить"</string>
+<string name="cast_play" msgid="5906987965619702702">"Воспроизвести"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Перемотать назад"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Перемотать на 10 секунд назад"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Перемотать на 30 секунд назад"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Ползунок перемотки"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Перейти к следующему объекту"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Перейти к предыдущему объекту"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Остановить"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Остановить трансляцию"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Аудио"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Отмена"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Субтитры"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Трек <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Нет"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"ОК"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Субтитры"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Включить звук"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-ru/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Включить"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"Для работы приложения \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" требуется включить сервисы Google Play."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Включите сервисы Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Установить"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"Для работы приложения \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" требуется установить сервисы Google Play."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Установите сервисы Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Ошибка сервисов Google Play"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"Для работы с приложением \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" требуются сервисы Google Play. Они не поддерживаются на вашем устройстве."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Обновить"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"Чтобы запустить приложение \"<xliff:g id="APP_NAME">%1$s</xliff:g>\", обновите сервисы Google Play."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Обновите сервисы Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"Сервисы Google Play, необходимые для работы приложения \"<xliff:g id="APP_NAME">%1$s</xliff:g>\", в настоящий момент обновляются."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Версия сервисов Google Play устарела. Они автоматически обновятся в ближайшее время."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Открыть на телефоне"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Войти"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Войти через аккаунт Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-ru/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Сохранить изображение"</string>
+<string name="s2" msgid="4550830452390689489">"Разрешить объявлению сохранить изображение в галерее?"</string>
+<string name="s3" msgid="2435407834265420668">"Разрешить"</string>
+<string name="s4" msgid="9167523597401839819">"Отклонить"</string>
+<string name="s5" msgid="1566682516266724847">"Создать мероприятие"</string>
+<string name="s6" msgid="5996672174517137271">"Разрешить объявлению создать мероприятие в календаре?"</string>
 </resources>
