--- a/res/values-sv/values.xml
+++ b/res/values-sv/values.xml
@@ -3,4 +3,75 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-sv/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"Det har uppstått ett fel mellan <xliff:g id="APP_NAME">%1$s</xliff:g> och Google Play-tjänsterna. Försök igen."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-sv/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Ansluten till <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Ansluter till <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Koppla från"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-sv/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Annons"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Castar till %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Textning"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Textning är inte tillgänglig"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Koppla från"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Bild som visas medan en annons spelas upp på Cast-mottagaren"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Pågående annons …"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Skivomslag"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Livestream"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Läser in …"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Hoppa över"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Framåt"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Tio sekunder framåt"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Trettio sekunder framåt"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Stäng av ljudet"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Pausa"</string>
+<string name="cast_play" msgid="5906987965619702702">"Spela upp"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Spola tillbaka"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Spola tillbaka tio sekunder"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Spola tillbaka trettio sekunder"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Sökreglage för uppspelning"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Hoppa till nästa objekt"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Hoppa till föregående objekt"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Stoppa"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Stoppa liveströmningen"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Ljud"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Avbryt"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Med textning"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Spår <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Inga"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"Ok"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Undertexter"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Slå på ljudet"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-sv/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Aktivera"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> fungerar inte om du inte aktiverar Google Play-tjänster."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Aktivera Google Play-tjänster"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Installera"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan inte köras utan Google Play-tjänsterna, som saknas på enheten."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Hämta Google Play-tjänster"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Fel på Google Play-tjänster"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> fungerar inte utan Google Play-tjänsterna, som inte stöds på enheten."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Uppdatera"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan inte köras om du inte uppdaterar Google Play-tjänsterna."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Uppdatera Google Play-tjänster"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan inte köras utan Google Play-tjänster, och dessa uppdateras för närvarande."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"En ny version av Google Play-tjänster krävs. Den uppdateras automatiskt inom kort."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Öppna på mobilen"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Logga in"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Logga in med Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-sv/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Spara bild"</string>
+<string name="s2" msgid="4550830452390689489">"Tillåter du att annonsen sparar bilden i Bildgalleriet?"</string>
+<string name="s3" msgid="2435407834265420668">"Godkänn"</string>
+<string name="s4" msgid="9167523597401839819">"Godkänn inte"</string>
+<string name="s5" msgid="1566682516266724847">"Skapa kalenderhändelse"</string>
+<string name="s6" msgid="5996672174517137271">"Tillåter du att annonsen skapar en kalenderhändelse?"</string>
 </resources>
