--- a/res/values-th/values.xml
+++ b/res/values-th/values.xml
@@ -3,4 +3,75 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-th/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> มีปัญหาเกี่ยวกับบริการของ Google Play โปรดลองอีกครั้ง"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-th/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"เชื่อมต่อ <xliff:g id="NAME">%1$s</xliff:g> แล้ว"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"กำลังเชื่อมต่อ <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"ยกเลิกการเชื่อมต่อ"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-th/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"โฆษณา"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"กำลังแคสต์ไปยัง %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"คำอธิบายภาพ"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"คำบรรยายไม่พร้อมใช้งาน"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"ยกเลิกการเชื่อมต่อ"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"ภาพที่แสดงขณะที่เครื่องรับการแคสต์กำลังเล่นโฆษณา"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"โฆษณาอยู่ระหว่างดำเนินการ..."</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"ปกอัลบั้ม"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"การสตรีมแบบสด"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"กำลังโหลด…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"ข้าม"</string>
+<string name="cast_forward" msgid="7884080323096468593">"กรอไปข้างหน้า"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"กรอไปข้างหน้า 10 วินาที"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"กรอไปข้างหน้า 30 วินาที"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"ปิดเสียง"</string>
+<string name="cast_pause" msgid="5308503786390460607">"หยุดชั่วคราว"</string>
+<string name="cast_play" msgid="5906987965619702702">"เล่น"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"กรอกลับ"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"กรอกลับ 10 วินาที"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"กรอกลับ 30 วินาที"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"ตัวควบคุมการค้นหาในการเล่น"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"ข้ามไปยังรายการถัดไป"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"ข้ามไปยังรายการก่อนหน้า"</string>
+<string name="cast_stop" msgid="9191388946729723891">"หยุด"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"หยุดการสตรีมแบบสด"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"เสียง"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"ยกเลิก"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"คำอธิบายภาพ"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"ติดตาม <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"ไม่มี"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"ตกลง"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"คำบรรยาย"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"เปิดเสียง"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-th/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"เปิดใช้"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> จะไม่ทำงานจนกว่าคุณจะเปิดใช้บริการ Google Play"</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"เปิดใช้บริการ Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"ติดตั้ง"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> จะไม่ทำงานหากไม่มีบริการ Google Play ซี่งไม่มีในอุปกรณ์ของคุณ"</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"ติดตั้งบริการ Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"ข้อผิดพลาดของบริการ Google Play"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> จะไม่ทำงานหากไม่มีบริการ Google Play ซึ่งอุปกรณ์ของคุณไม่สนับสนุน"</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"อัปเดต"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> จะไม่ทำงานจนกว่าคุณจะอัปเดตบริการ Google Play"</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"อัปเดตบริการ Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> จะไม่ทำงานหากไม่มีบริการ Google Play ซึ่งกำลังอัปเดตอยู่ในขณะนี้"</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"จำเป็นต้องใช้บริการ Google Play เวอร์ชันใหม่ ซึ่งจะอัปเดตอัตโนมัติในอีกไม่ช้า"</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"เปิดบนโทรศัพท์"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"ลงชื่อเข้าใช้"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"ลงชื่อเข้าใช้ด้วย Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-th/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"บันทึกรูปภาพ"</string>
+<string name="s2" msgid="4550830452390689489">"อนุญาตให้โฆษณาจัดเก็บรูปภาพในแกลเลอรีภาพไหม"</string>
+<string name="s3" msgid="2435407834265420668">"ยอมรับ"</string>
+<string name="s4" msgid="9167523597401839819">"ปฏิเสธ"</string>
+<string name="s5" msgid="1566682516266724847">"สร้างกิจกรรมในปฏิทิน"</string>
+<string name="s6" msgid="5996672174517137271">"อนุญาตให้โฆษณาสร้างกิจกรรมในปฏิทินไหม"</string>
 </resources>
